lab2/Code/syntax.output
State 11 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | error FunDec CompSt
    9       | error CompSt

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT error LC DefList RC
   17                | STRUCT error RC

   18 OptTag: ID
   19       | %empty

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB
   23       | VarDec LB error RB
   24       | VarDec LB INT error

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | ID LP error RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error SEMI
   41     | IF LP error RP Stmt
   42     | IF LP error RP Stmt ELSE Stmt
   43     | WHILE LP error RP Stmt
   44     | WHILE error Stmt

   45 DefList: Def DefList
   46        | %empty

   47 Def: Specifier DecList SEMI
   48    | Specifier error SEMI
   49    | Specifier DecList error
   50    | error SEMI

   51 DecList: Dec
   52        | Dec COMMA DecList

   53 Dec: VarDec
   54    | VarDec ASSIGNOP Exp

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp AND Exp
   57    | Exp OR Exp
   58    | Exp RELOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp STAR Exp
   62    | Exp DIV Exp
   63    | LP Exp RP
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp DOT ID
   70    | ID
   71    | INT
   72    | FLOAT
   73    | STRING

   74 Args: Exp COMMA Args
   75     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 16 17 23 24 27 40 41 42 43 44 48 49 50
    INT <node> (258) 22 24 71
    FLOAT <node> (259) 72
    ID <node> (260) 18 20 21 25 26 27 66 67 69 70
    STRING <node> (261) 73
    SEMI <node> (262) 4 5 7 34 36 40 47 48 50
    COMMA <node> (263) 11 28 52 74
    ASSIGNOP <node> (264) 54 55
    RELOP <node> (265) 58
    PLUS <node> (266) 59
    MINUS <node> (267) 60 64
    STAR <node> (268) 61
    DIV <node> (269) 62
    AND <node> (270) 56
    OR <node> (271) 57
    NOT <node> (272) 65
    DOT <node> (273) 69
    TYPE <node> (274) 12
    LP <node> (275) 25 26 27 37 38 39 41 42 43 63 66 67
    RP <node> (276) 25 26 27 37 38 39 41 42 43 63 66 67
    LB <node> (277) 22 23 24 68
    RB <node> (278) 22 23 68
    LC <node> (279) 14 16 31
    RC <node> (280) 14 16 17 31
    STRUCT <node> (281) 14 15 16 17
    RETURN <node> (282) 36
    IF <node> (283) 37 38 41 42
    ELSE <node> (284) 38 42
    WHILE <node> (285) 39 43 44
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (35)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList <node> (36)
        on left: 10 11
        on right: 4 11
    Specifier <node> (37)
        on left: 12 13
        on right: 4 5 6 30 47 48 49
    StructSpecifier <node> (38)
        on left: 14 15 16 17
        on right: 13
    OptTag <node> (39)
        on left: 18 19
        on right: 14
    Tag <node> (40)
        on left: 20
        on right: 15
    VarDec <node> (41)
        on left: 21 22 23 24
        on right: 10 11 22 23 24 30 53 54
    FunDec <node> (42)
        on left: 25 26 27
        on right: 6 8
    VarList <node> (43)
        on left: 28 29
        on right: 25 28
    ParamDec <node> (44)
        on left: 30
        on right: 28 29
    CompSt <node> (45)
        on left: 31
        on right: 6 8 9 35
    StmtList <node> (46)
        on left: 32 33
        on right: 31 32
    Stmt <node> (47)
        on left: 34 35 36 37 38 39 40 41 42 43 44
        on right: 32 37 38 39 41 42 43 44
    DefList <node> (48)
        on left: 45 46
        on right: 14 16 31 45
    Def <node> (49)
        on left: 47 48 49 50
        on right: 45
    DecList <node> (50)
        on left: 51 52
        on right: 47 49 52
    Dec <node> (51)
        on left: 53 54
        on right: 51 52
    Exp <node> (52)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 34 36 37 38 39 54 55 56 57 58 59 60 61 62 63 64 65 68 69 74 75
    Args <node> (53)
        on left: 74 75
        on right: 66 74


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI
    8       | error . FunDec CompSt
    9       | error . CompSt

    ID    shift, and go to state 9
    SEMI  shift, and go to state 10
    LC    shift, and go to state 11

    FunDec  go to state 12
    CompSt  go to state 13


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . error LC DefList RC
   17                | STRUCT . error RC

    error  shift, and go to state 14
    ID     shift, and go to state 15

    LC  reduce using rule 19 (OptTag)

    OptTag  go to state 16
    Tag     go to state 17


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 18


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 19
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 20
    SEMI  shift, and go to state 21

    ExtDecList  go to state 22
    VarDec      go to state 23
    FunDec      go to state 24


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP error RP

    LP  shift, and go to state 25


State 10

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 11

   31 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 46 (DefList)]
    INT     reduce using rule 46 (DefList)
    FLOAT   reduce using rule 46 (DefList)
    ID      reduce using rule 46 (DefList)
    STRING  reduce using rule 46 (DefList)
    MINUS   reduce using rule 46 (DefList)
    NOT     reduce using rule 46 (DefList)
    LP      reduce using rule 46 (DefList)
    LC      reduce using rule 46 (DefList)
    RC      reduce using rule 46 (DefList)
    RETURN  reduce using rule 46 (DefList)
    IF      reduce using rule 46 (DefList)
    WHILE   reduce using rule 46 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 28
    Def              go to state 29


State 12

    8 ExtDef: error FunDec . CompSt

    LC  shift, and go to state 11

    CompSt  go to state 30


State 13

    9 ExtDef: error CompSt .

    $default  reduce using rule 9 (ExtDef)


State 14

   16 StructSpecifier: STRUCT error . LC DefList RC
   17                | STRUCT error . RC

    LC  shift, and go to state 31
    RC  shift, and go to state 32


State 15

   18 OptTag: ID .
   20 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


State 16

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 33


State 17

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 18

    0 $accept: Program $end .

    $default  accept


State 19

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 20

   21 VarDec: ID .
   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP error RP

    LP  shift, and go to state 25

    $default  reduce using rule 21 (VarDec)


State 21

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 22

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 34


State 23

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   22 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB
   24       | VarDec . LB INT error

    COMMA  shift, and go to state 35
    LB     shift, and go to state 36

    $default  reduce using rule 10 (ExtDecList)


State 24

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 11

    CompSt  go to state 37


State 25

   25 FunDec: ID LP . VarList RP
   26       | ID LP . RP
   27       | ID LP . error RP

    error   shift, and go to state 38
    TYPE    shift, and go to state 2
    RP      shift, and go to state 39
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 42


State 26

   50 Def: error . SEMI

    SEMI  shift, and go to state 43


State 27

   47 Def: Specifier . DecList SEMI
   48    | Specifier . error SEMI
   49    | Specifier . DecList error

    error  shift, and go to state 44
    ID     shift, and go to state 45

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


State 28

   31 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 11
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 61
    Stmt      go to state 62
    Exp       go to state 63


State 29

   45 DefList: Def . DefList

    error   shift, and go to state 26
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 46 (DefList)]
    INT     reduce using rule 46 (DefList)
    FLOAT   reduce using rule 46 (DefList)
    ID      reduce using rule 46 (DefList)
    STRING  reduce using rule 46 (DefList)
    MINUS   reduce using rule 46 (DefList)
    NOT     reduce using rule 46 (DefList)
    LP      reduce using rule 46 (DefList)
    LC      reduce using rule 46 (DefList)
    RC      reduce using rule 46 (DefList)
    RETURN  reduce using rule 46 (DefList)
    IF      reduce using rule 46 (DefList)
    WHILE   reduce using rule 46 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 64
    Def              go to state 29


State 30

    8 ExtDef: error FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 31

   16 StructSpecifier: STRUCT error LC . DefList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 46 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 65
    Def              go to state 29


State 32

   17 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 17 (StructSpecifier)


State 33

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 46 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 66
    Def              go to state 29


State 34

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 35

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 45

    ExtDecList  go to state 67
    VarDec      go to state 23


State 36

   22 VarDec: VarDec LB . INT RB
   23       | VarDec LB . error RB
   24       | VarDec LB . INT error

    error  shift, and go to state 68
    INT    shift, and go to state 69


State 37

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 38

   27 FunDec: ID LP error . RP

    RP  shift, and go to state 70


State 39

   26 FunDec: ID LP RP .

    $default  reduce using rule 26 (FunDec)


State 40

   30 ParamDec: Specifier . VarDec

    ID  shift, and go to state 45

    VarDec  go to state 71


State 41

   25 FunDec: ID LP VarList . RP

    RP  shift, and go to state 72


State 42

   28 VarList: ParamDec . COMMA VarList
   29        | ParamDec .

    COMMA  shift, and go to state 73

    $default  reduce using rule 29 (VarList)


State 43

   50 Def: error SEMI .

    $default  reduce using rule 50 (Def)


State 44

   48 Def: Specifier error . SEMI

    SEMI  shift, and go to state 74


State 45

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


State 46

   22 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB
   24       | VarDec . LB INT error
   53 Dec: VarDec .
   54    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 75
    LB        shift, and go to state 36

    $default  reduce using rule 53 (Dec)


State 47

   47 Def: Specifier DecList . SEMI
   49    | Specifier DecList . error

    error  shift, and go to state 76
    SEMI   shift, and go to state 77


State 48

   51 DecList: Dec .
   52        | Dec . COMMA DecList

    COMMA  shift, and go to state 78

    $default  reduce using rule 51 (DecList)


State 49

   40 Stmt: error . SEMI

    SEMI  shift, and go to state 79


State 50

   71 Exp: INT .

    $default  reduce using rule 71 (Exp)


State 51

   72 Exp: FLOAT .

    $default  reduce using rule 72 (Exp)


State 52

   66 Exp: ID . LP Args RP
   67    | ID . LP RP
   70    | ID .

    LP  shift, and go to state 80

    $default  reduce using rule 70 (Exp)


State 53

   73 Exp: STRING .

    $default  reduce using rule 73 (Exp)


State 54

   64 Exp: MINUS . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 81


State 55

   65 Exp: NOT . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 82


State 56

   63 Exp: LP . Exp RP

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 83


State 57

   36 Stmt: RETURN . Exp SEMI

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 84


State 58

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt
   41     | IF . LP error RP Stmt
   42     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 85


State 59

   39 Stmt: WHILE . LP Exp RP Stmt
   43     | WHILE . LP error RP Stmt
   44     | WHILE . error Stmt

    error  shift, and go to state 86
    LP     shift, and go to state 87


State 60

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 61

   31 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 88


State 62

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 11
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 89
    Stmt      go to state 62
    Exp       go to state 63


State 63

   34 Stmt: Exp . SEMI
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    SEMI      shift, and go to state 90
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    DOT       shift, and go to state 99
    LB        shift, and go to state 100


State 64

   45 DefList: Def DefList .

    $default  reduce using rule 45 (DefList)


State 65

   16 StructSpecifier: STRUCT error LC DefList . RC

    RC  shift, and go to state 101


State 66

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 102


State 67

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 68

   23 VarDec: VarDec LB error . RB

    RB  shift, and go to state 103


State 69

   22 VarDec: VarDec LB INT . RB
   24       | VarDec LB INT . error

    error  shift, and go to state 104
    RB     shift, and go to state 105


State 70

   27 FunDec: ID LP error RP .

    $default  reduce using rule 27 (FunDec)


State 71

   22 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB
   24       | VarDec . LB INT error
   30 ParamDec: Specifier VarDec .

    LB  shift, and go to state 36

    $default  reduce using rule 30 (ParamDec)


State 72

   25 FunDec: ID LP VarList RP .

    $default  reduce using rule 25 (FunDec)


State 73

   28 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 106
    ParamDec         go to state 42


State 74

   48 Def: Specifier error SEMI .

    $default  reduce using rule 48 (Def)


State 75

   54 Dec: VarDec ASSIGNOP . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 107


State 76

   49 Def: Specifier DecList error .

    $default  reduce using rule 49 (Def)


State 77

   47 Def: Specifier DecList SEMI .

    $default  reduce using rule 47 (Def)


State 78

   52 DecList: Dec COMMA . DecList

    ID  shift, and go to state 45

    VarDec   go to state 46
    DecList  go to state 108
    Dec      go to state 48


State 79

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


State 80

   66 Exp: ID LP . Args RP
   67    | ID LP . RP

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    RP      shift, and go to state 109

    Exp   go to state 110
    Args  go to state 111


State 81

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   64    | MINUS Exp .
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    STAR  shift, and go to state 95
    DIV   shift, and go to state 96
    DOT   shift, and go to state 99
    LB    shift, and go to state 100

    $default  reduce using rule 64 (Exp)


State 82

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   65    | NOT Exp .
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    DOT  shift, and go to state 99
    LB   shift, and go to state 100

    $default  reduce using rule 65 (Exp)


State 83

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   63    | LP Exp . RP
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    DOT       shift, and go to state 99
    RP        shift, and go to state 112
    LB        shift, and go to state 100


State 84

   36 Stmt: RETURN Exp . SEMI
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    SEMI      shift, and go to state 113
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    DOT       shift, and go to state 99
    LB        shift, and go to state 100


State 85

   37 Stmt: IF LP . Exp RP Stmt
   38     | IF LP . Exp RP Stmt ELSE Stmt
   41     | IF LP . error RP Stmt
   42     | IF LP . error RP Stmt ELSE Stmt

    error   shift, and go to state 114
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 115


State 86

   44 Stmt: WHILE error . Stmt

    error   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 11
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    CompSt  go to state 60
    Stmt    go to state 116
    Exp     go to state 63


State 87

   39 Stmt: WHILE LP . Exp RP Stmt
   43     | WHILE LP . error RP Stmt

    error   shift, and go to state 117
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 118


State 88

   31 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 31 (CompSt)


State 89

   32 StmtList: Stmt StmtList .

    $default  reduce using rule 32 (StmtList)


State 90

   34 Stmt: Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 91

   55 Exp: Exp ASSIGNOP . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 119


State 92

   58 Exp: Exp RELOP . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 120


State 93

   59 Exp: Exp PLUS . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 121


State 94

   60 Exp: Exp MINUS . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 122


State 95

   61 Exp: Exp STAR . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 123


State 96

   62 Exp: Exp DIV . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 124


State 97

   56 Exp: Exp AND . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 125


State 98

   57 Exp: Exp OR . Exp

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 126


State 99

   69 Exp: Exp DOT . ID

    ID  shift, and go to state 127


State 100

   68 Exp: Exp LB . Exp RB

    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    STRING  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    Exp  go to state 128


State 101

   16 StructSpecifier: STRUCT error LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 102

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 103

   23 VarDec: VarDec LB error RB .

    $default  reduce using rule 23 (VarDec)


State 104

   24 VarDec: VarDec LB INT error .

    $default  reduce using rule 24 (VarDec)


State 105

   22 VarDec: VarDec LB INT RB .

    $default  reduce using rule 22 (VarDec)


State 106

   28 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 28 (VarList)


State 107

   54 Dec: VarDec ASSIGNOP Exp .
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    DOT       shift, and go to state 99
    LB        shift, and go to state 100

    $default  reduce using rule 54 (Dec)


State 108

   52 DecList: Dec COMMA DecList .

    $default  reduce using rule 52 (DecList)


State 109

   67 Exp: ID LP RP .

    $default  reduce using rule 67 (Exp)


State 110

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   74 Args: Exp . COMMA Args
   75     | Exp .

    COMMA     shift, and go to state 129
    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    DOT       shift, and go to state 99
    LB        shift, and go to state 100

    $default  reduce using rule 75 (Args)


State 111

   66 Exp: ID LP Args . RP

    RP  shift, and go to state 130


State 112

   63 Exp: LP Exp RP .

    $default  reduce using rule 63 (Exp)


State 113

   36 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 36 (Stmt)


State 114

   41 Stmt: IF LP error . RP Stmt
   42     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 131


State 115

   37 Stmt: IF LP Exp . RP Stmt
   38     | IF LP Exp . RP Stmt ELSE Stmt
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 91
    RELOP     shift, and go to state 92
    PLUS      shift, and go to state 93
    MINUS     shift, and go to state 94
    STAR      shift, and go to state 95
    DIV       shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    DOT       shift, and go to state 99
    RP        shift, and go to state 132
    LB        shift, and go to state 100


State 116

   44 Stmt: WHILE error Stmt .

    $default  reduce using rule 44 (Stmt)


State 117

   43 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 133


State 118
